spacing and alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ a {
     font-weight: 500;
     font-size: 40px;
     color: #F18701;
+    margin-right: 6px;
 }
 
 .number_users span {
@@ -253,8 +254,8 @@ a {
     font-weight: 400;
     line-height: 24px;
     padding-right: 130px;
-    /* margin-top: 16px;
-    margin-bottom: 32px; */
+    margin-top: 16px;
+    margin-bottom: 32px;
 }
 
 .make_us_left li {
@@ -262,6 +263,10 @@ a {
     align-items: center;
     column-gap: 12px;
     margin-bottom: 14px;
+}
+
+.make_us_left li:last-child{
+    margin-bottom: 0;
 }
 
 .make_us_left_check {
@@ -283,7 +288,7 @@ a {
 }
 
 .make_us_left_button button {
-    margin-top: 12px;
+    margin-top: 40px;
     padding: 16px 32px;
     background: #7678ED;
     border: none;
@@ -312,22 +317,24 @@ a {
 }
 
 .popular-header h4 {
+    max-width: 384px;
     font-size: 48px;
     font-weight: 600;
     color: #13132C;
     line-height: 70px;
     text-transform: capitalize;
+    margin-bottom: 24px;
 }
 
 .popular-header p {
+    max-width: 386px;
     font-size: 14px;
     font-weight: 400;
     color: #13132C;
     line-height: 24px;
-    /* max-width: 386px;
-    margin: 0 auto; */
-    padding: 0 30px;
-    margin-top: 24px;
+    margin: 0 auto;
+    /* padding: 0 30px; */
+
 }
 
 .popular-tabs {
@@ -626,6 +633,7 @@ a {
     font-size: 16px;
     font-weight: 600;
     color: #7678ed;
+    background: #fff;
     border: 1px solid #7678ed;
     transition: all linear 0.3s;
     -webkit-transition: all linear 0.3s;
